[VMWare] Install CNS automatically
Before we could only prepare storage node for manual
installation of the CNS to the OCP cluster.
But, appropriate ansible role already exists in 'openshift-ansible'
package.
So, reuse it, to have complete installation of CNS without any need to
do anything manually.

--- a/reference-architecture/vmware-ansible/playbooks/cns-storage.yaml
+++ b/reference-architecture/vmware-ansible/playbooks/cns-storage.yaml
@@ -8,5 +8,8 @@
 - include: node-setup.yaml
   tags: [ 'node-setup']
 
+- include: cns-setup.yaml
+  tags: [ 'node-setup']
+
 - include: cleanup-cns.yaml
   tags: ['clean']
