[VMWare] Test Squash commit of all the changes

--- a/reference-architecture/vmware-ansible/playbooks/roles/instance-groups/tasks/main.yaml
+++ b/reference-architecture/vmware-ansible/playbooks/roles/instance-groups/tasks/main.yaml
@@ -27,6 +27,7 @@
 - name: Add a master to the single master group
   add_host:
     name: "{{ hostvars[item].inventory_hostname }}"
+    openshift_hostname: "{{ hostvars[item].inventory_hostname }}"
     groups: single_master
     openshift_node_labels:
       role: master
@@ -35,11 +36,11 @@
 - name: Add infra instances to host group
   add_host:
     name: "{{ hostvars[item].inventory_hostname }}"
-    groups: allnodes, nodes, cluster_hosts, schedulable_nodes, infra
     openshift_hostname: "{{ hostvars[item].inventory_hostname }}"
+    groups: allnodes, nodes, cluster_hosts, schedulable_nodes, infra
     openshift_node_labels:
       role: infra
-  with_items: "{{ groups[cluster_id + '-infra'] }}"
+  with_items: "{{ groups[cluster_id + '-infra'] | default([]) }}"
 
 - name: Add app instances to host group
   add_host:
@@ -64,14 +65,16 @@
 - name: Add NFS instances to allnodes
   add_host:
     name: "{{ hostvars[item].inventory_hostname }}"
+    openshift_hostname: "{{ hostvars[item].inventory_hostname }}"
     groups: allnodes
-  with_items: "{{ groups[cluster_id + '-networkfs'] }}"
+  with_items: "{{ groups[cluster_id + '-networkfs'] | default([]) }}"
 
 - name: Add loadbalancer instances to allnodes
   add_host:
     name: "{{ hostvars[item].inventory_hostname }}"
+    openshift_hostname: "{{ hostvars[item].inventory_hostname }}"
     groups: allnodes
-  with_items: "{{ groups[cluster_id + '-loadbalancer'] }}"
+  with_items: "{{ groups[cluster_id + '-loadbalancer'] | default([]) }}"
 
 - name: Add cns instances to allnodes
   add_host:
