--- a/reference-architecture/vmware-ansible/playbooks/roles/create-vm-cns-prod-ose/tasks/main.yaml
+++ b/reference-architecture/vmware-ansible/playbooks/roles/create-vm-cns-prod-ose/tasks/main.yaml
@@ -45,7 +45,7 @@
     - size_gb: 40
       datastore: "{{ vcenter_datastore }}"
       type: thin
-    - size_gb: 300
+    - size_gb: "{{ container_storage_size | int }}"
       datastore: "{{ vcenter_datastore }}"
       type: eagerZeroedThick
     hardware:
