[VMWare] Allow to specify container storage size
per each storage node.

--- a/reference-architecture/vmware-ansible/ocp-on-vmware.ini
+++ b/reference-architecture/vmware-ansible/ocp-on-vmware.ini
@@ -96,3 +96,6 @@ containerized=false
 
 # persistent container storage: none, crs, cns
 container_storage=none
+
+# size of the persistent container storage per node
+container_storage_size=300
