[VMWare] Add possibility to specify CNS disk type

--- a/reference-architecture/vmware-ansible/ocp-on-vmware.ini
+++ b/reference-architecture/vmware-ansible/ocp-on-vmware.ini
@@ -99,3 +99,8 @@ container_storage=none
 
 # size of the persistent container storage per node
 container_storage_size=300
+
+# persistent container storage disk type. Can be one of following:
+# 'thin', 'thick', 'zeroedThick', 'eagerZeroedThick', ... or any other
+# type supported by VMWare.
+container_storage_disk_type=eagerZeroedThick
