[VMWare] Add possibility to specify CNS disk type

--- a/reference-architecture/vmware-ansible/ocp-on-vmware.ini
+++ b/reference-architecture/vmware-ansible/ocp-on-vmware.ini
@@ -71,9 +71,6 @@ storage_nodes=0
 # start node IP address *must be a contiguous space
 vm_ipaddr_start=
 
-# VM IP addresses allocation type. Can be either 'dhcp' or 'static'.
-vm_ipaddr_allocation_type=dhcp
-
 # node hostname prefix
 ocp_hostname_prefix=
 
@@ -99,3 +96,8 @@ container_storage=none
 
 # size of the persistent container storage per node
 container_storage_size=300
+
+# persistent container storage disk type. Can be one of following:
+# 'thin', 'thick', 'zeroedThick', 'eagerZeroedThick', ... or any other
+# type supported by VMWare.
+container_storage_disk_type=eagerZeroedThick
